--- a/config.json
+++ b/config.json
@@ -1,1 +1,8 @@
-//
+ {
+    "appName": "E-commerce SMN",
+    "version": "1.0.0",
+    "aputeste": {
+        "mockProducts": 6,
+        "defaultView": "products"
+    }
+}
