feat/vinicius-souza: adicionando config padronizado

--- a/config.json
+++ b/config.json
@@ -1,1 +1,8 @@
- { "appName": "E-commerce SMN", "version": "1.0.0", "header": { "stickyHeader": true, "showBadge": true } }
+  {
+    "appName": "E-commerce SMN",
+    "version": "1.0.0",
+    "header": {
+        "stickyHeader": true,
+        "showBadge": true
+    }
+}
