feat/gabriel-felix: Implementação das configurações do arquivo .json

--- a/config.json
+++ b/config.json
@@ -1,1 +1,9 @@
-//
+{ 
+    "appName": "E-commerce SMN", 
+    "version": "1.0.0", 
+    
+    "cart": { "autoSave": true, 
+    "storageKey": "ecommerce_cart"    
+    } 
+
+}
