feat/rodrigo-diniz: adicionando código  no config.json

--- a/config.json
+++ b/config.json
@@ -1,1 +1,8 @@
-//
+ {
+    "appName": "E-commerce SMN",
+    "version": "1.0.0",
+    "cards": {
+        "imageHeight": "200px",
+        "hoverEffect": true
+    }
+}
